# nightingale

./: .gitignore  Cargo.toml  Dockerfile.aarch64  MULTI_OUTPUT_POC.md  README.md
.cargo/: config.toml
app-core/: Cargo.toml
app-core/analyzer/: align.py  analyze.py  bpm_detect.py  diarize.py  key_detect.py  language.py  pipeline.py  requirements.txt  server.py  stems.py  transcribe.py  transliterate.py  whisper_compat.py  youtube.py
app-core/src/: analyzer.rs  cache.rs  config.rs  error.rs  iem_server.rs  lib.rs  library_db.rs  library_menu.rs  library_model.rs  media_server.rs  metadata_fix.rs  playback.rs  profile.rs  scanner.rs  song.rs  stats.rs  vendor.rs  vendor_scripts.rs
app-core/src/iem/: clock.rs  discovery.rs  mod.rs  session.rs  signaling.rs  streaming.rs  transcoder.rs
client/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/.husky/: pre-commit
client/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: analyzer.rs  cache.rs  config.rs  iem.rs  lib.rs  logging.rs  main.rs  metadata_fix.rs  microphones.rs  multi_channel_audio.rs  playback.rs  profile.rs  scanner.rs  vendor.rs  youtube.rs
client/src/adapters/: microphone.ts  playback.ts
client/src/components/: error-boundary.tsx
client/src/contexts/: menu-focus-context.tsx  nav-input-context.tsx
client/src/hooks/: use-analysis.ts  use-audio-devices.ts  use-audio-player.ts  use-best-scores-by-song.ts  use-clear-cache.ts  use-current-profile.ts  use-dialog.ts  use-exit-dialog.ts  use-folder-actions.ts  use-folder-navigation.ts  use-info-dialog.ts  use-library-filter.ts  use-mic-monitor.ts  use-mic-pitch.ts  use-mic-test.ts  use-multi-channel-audio-player.ts  use-multi-mic.ts  use-multi-pitch-scoring.ts  use-pitch-scoring.ts  use-preview-playback.ts  use-profile-dialog.ts  use-search.ts  use-settings-dialog.ts  use-should-run-setup.ts
client/src/lib/: library-menu-filter.ts
client/src/mutations/: use-config-mutation.ts  use-profile-mutations.ts
client/src/queries/: keys.ts  use-cache-stats.ts  use-config.ts  use-folder-tree.ts  use-library-menu-items.ts  use-metadata-corrections.ts  use-profiles.ts  (+2 more)
docs/: FEATURES.md  WIFI_IEM_CLIENT_PROTOCOL.md  WIFI_IEM_SERVER.md
site/: package-lock.json  package.json
xtask/src/: main.rs
(+165 files in other folders)
