[package]
name = "app-core"
version = "0.4.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ts-rs = "12"
walkdir = "2"
blake3 = "1"
lofty = "0.23"
ureq = { version = "3", features = ["json"] }
urlencoding = "2"
rand = "0.9"
tiny_http = "0.12.0"
tracing = "0.1"
